# claude-e-mart

./: .gitignore  Makefile  README.md  docker-compose.yml
.ai/: AGENTS.md  README.md  link-ai.sh  settings.json
.claude-plugin/: marketplace.json
.github/: AWS_OIDC_SETUP.md
.github/workflows/: deploy.yml  pr.yml
agent/: .env.example  BEDROCK_SETUP.md  Dockerfile  Dockerfile.fargate  Makefile  README.md  agent_manager.py  basic_agent.py  basic_agent.ts  config.py  lambda_handler.py  main.py  models.py  pyproject.toml  requirements.txt  server.py  session_storage.py
agent/iam-policies/: bedrock-access-policy.json  lambda-execution-policy.json
agent/tests/: __init__.py  conftest.py  test_server.py
cli/: package.json  tsconfig.json
cli/src/: cli.tsx  markdown.tsx
docs/: CUSTOM_DOMAIN.md  boris-cherny-claude-code-workflow.md  claude-code-plugin-structure.md
infra/: .env.example  .gitignore  Makefile  cdk-outputs.json  cdk.context.json  cdk.json  package.json  tsconfig.json
infra/lib/: api-stack.ts  index.ts  storage-stack.ts  ui-stack.ts
infra/scripts/: deploy.sh  destroy.sh
plugins/apple-notes/.claude-plugin/: plugin.json
plugins/code-tools/.claude-plugin/: plugin.json
plugins/code-tools/commands/: commit-push-pr.md
plugins/code-tools/scripts/: format-code.sh
plugins/monitoring/: .mcp.json
scripts/: README.md  install-official-plugins.sh  start-tracing.sh
shared/: README.md  link-to-project.sh
shared/.claude/: CLAUDE.md
ui/: .env.example  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ChatInput.tsx  (+5 more)
(+14 files in other folders)
